syntax = "proto3";

package knowdateapp.knowledge.v1.common;

import "google/protobuf/timestamp.proto";

import "api/v1/common/collection.proto";

option go_package = "github.com/knowdateapp/knowdateapp/backend/knowledge/internal/pb/api/v1/common";

message KnowledgeBase {
  string id = 1;
  string owner_id = 2;
  string topic = 3;
  string description = 4;
  repeated common.Collection collections = 5;
  google.protobuf.Timestamp created_at = 6;
}
